@@ -1,3 +1,8 @@
+2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>
+
+	bug #37977 Support for Openmoko Debug Board
+	* avrdude.conf.in: added openmoko entry
+
 2013-01-29  Rene Liebscher <R.Liebscher@gmx.de>
 
 	patch #7932 Read USBtiny VID and PID from avrdude.conf if provided.
